[fix] style when display on mobile

--- a/style.css
+++ b/style.css
@@ -3,23 +3,25 @@
   color: #6495ED;
 }
 
-.clock {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 800px;
-  height: 200px;
-  margin-left: -400px;
-  margin-top: -150px;
-  background: rgba(100, 30, 70, 0.1);
+.clock-container {
+  padding: 20px;
 }
 
-.col-sm-3 {
+.clock {
+  background: rgba(100, 30, 70, 0.1);
+  overflow: auto;
+  max-width: 800px;
+  margin: 0 auto;
+  padding-bottom: 30px;
+}
+
+.clock-inner-box {
   height: 100px;
   width: 120px;
   border: 1px solid #A9A9A9;
   border-radius: 5px;
-  margin: 50px 40px;
+  margin: 30px 30px 0;
+  display: inline-block;
 }
 
 div h1 {
@@ -29,4 +31,11 @@ div h1 {
 div h6 {
   text-align: center;
   color: #A9A9A9;
+}
+
+@media screen and (max-width: 480px) {
+  .col-sm-3 {
+    margin: 10px;
+  }
+
 }
